--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -628,8 +628,8 @@
                         </div>
                         <div class="card-content p-3">
                             <div class="is-flex is-justify-content-between is-align-items-start is-flex-wrap-wrap mb-2" style="gap: 4px;">
-                                <span class="tag is-white p-0 font-mono is-size-7 opacity-40" style="height: auto; line-height: 1.2;">${game.id}</span>
-                                <span class="tag is-white p-0 font-mono is-size-7 has-text-weight-bold has-text-primary" style="height: auto; line-height: 1.2; margin-left: auto;">v${game.display_version}</span>
+                                <span class="font-mono is-size-7 opacity-40">${game.id}</span>
+                                <span class="font-mono is-size-7 has-text-weight-bold" style="margin-left: auto;">v${game.display_version}</span>
                             </div>
                             
                             <p class="is-size-6 has-text-weight-bold mb-3 truncate" title="${game.name}">${game.name}</p>
