--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -183,7 +183,7 @@
 
     <!-- Footer with System Information -->
     <footer class="footer has-background-dark has-text-light py-2 mt-auto">
-        <div class="container is-fluid">
+        <div class="container is-fluid px-5">
             <div class="columns is-vcentered is-mobile is-multiline">
                 <div class="column is-12-mobile is-4-tablet">
                     <p class="is-size-7 opacity-70">
