--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar is-fixed-top shadow-sm" role="navigation" aria-label="main navigation">
-    <div class="container">
+    <div class="container is-fluid px-5">
         <div class="navbar-brand">
             <a class="navbar-item has-text-weight-black is-size-4 tracking-tighter" href="/">
                 <span class="has-text-primary">My</span>Foil
