UI: Ensure Library and Wishlist use full screen width

--- a/app/templates/wishlist.html
+++ b/app/templates/wishlist.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 {% include 'nav.html' %}
-<div class="container pb-6 is-max-widescreen">
+<div class="container is-fluid px-5 pb-6">
     <div class="section pt-5">
         <div class="level mb-4">
             <div class="level-left">
